--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ kramdown:
   use_coderay: false
 
 # SEO Related
-google_site_verification :
+google_site_verification : "yys0vI5M5MBHIMjBt4hB8DNN70TAZmN7A_V1xA51ykU"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
