--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: ""
 
   - title: "CV"
-    url: /files/Maksym-Khomenko-AcademicCV.pdf
+    url: /files/Maksym-Khomenko-AcademicCV (website).pdf
 
   - title: "Research"
     url: /research/
