--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "maksym-khomenko/"
+  linkedin         : #"maksym-khomenko/"
   orcid            :
   pinterest        :
   soundcloud       :
