--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   employer         :
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : "maksym.khomenko@economics.gu.se"
-  mobile           : "+46(0)704-609-338"
+  mobile           : "+46 704 609 338"
   uri              :
   bitbucket        :
   codepen          :
