--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "              MAKS KHOMENKO                   "
 title_separator          : "-"
 name                     : &name "              MAKS KHOMENKO                   "
-description              : "Maksym Khomenko PhD Candidate in Economics University of Gothenburg,Stanford University"
+description              : "Maksym Khomenko PhD in Economics"
 url                      : "https://maksymkhomenko.github.io"  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  :  # the subpath of your site, e.g. "/blog"
 repository               : "maksymkhomenko/maksymkhomenko.github.io"
