--- a/_config.yml
+++ b/_config.yml
@@ -103,8 +103,8 @@ author:
   location         :
   employer         :
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            : "maksym.khomenko@economics.gu.se"
-  mobile           : "+46 704 609 338"
+  email            : "maksym.i.khomenko@gmail.com"
+  mobile           : "+46 765 141 841"
   uri              :
   bitbucket        :
   codepen          :
