--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: ""
 
   - title: "CV"
-    url: /files/Academic.pdf
+    url: /files/AG_Updated_CV_Nov2019.pdf
 
   - title: "Research"
     url: /research/
